dev-infrastructure/zz_fixture_TestHelmTemplate_dev_westus3_svc_1_istio.yaml
---
# Source: istio/templates/ops-ingress.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ops-ingress-gateway
  namespace: aks-istio-ingress
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      service.beta.kubernetes.io/azure-pip-name: "aro-hcp-ops-ingress"
      service.beta.kubernetes.io/azure-load-balancer-resource-group: "hcp-underlay-dev-westus3"
  listeners:
  - name: admin-api-https
    port: 443
    protocol: HTTPS
    hostname: "admin.westus3.hcpsvc.osadev.cloud"
    tls:
      mode: Terminate
      certificateRefs:
      - name: admin-api-credential
        kind: Secret
    allowedRoutes:
      namespaces:
        from: All
  - name: sessiongate-https
    port: 443
    protocol: HTTPS
    hostname: "sessiongate.westus3.hcpsvc.osadev.cloud"
    tls:
      mode: Terminate
      certificateRefs:
      - name: sessiongate-credential
        kind: Secret
    allowedRoutes:
      namespaces:
        from: All
---
# Source: istio/templates/strict_mtls.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: 'aks-istio-system'
spec:
  mtls:
    mode: STRICT
---
# Source: istio/templates/mise.serviceentry.yml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-authz-http
  namespace: 'aks-istio-system'
spec:
  hosts:
  - "mise.mise.svc.cluster.local"
  endpoints:
  - address: "127.0.0.1"
  ports:
  - name: http
    number: 8080
    protocol: http
  resolution: STATIC
